
2000-06-11  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/parsecmd.c: Added the -c flag which allows you to execute
	  arbitrary strings from the command line

	* src/gnetlist.1: Update the manual page for above

2000-06-04  Ales Hvezda  <ahvezda@geda.seul.org>

	* tests/*.verilog: Updated baseline verilog tests cases to take into
	  account latest test_verilog.sch and 7447.sch

2000-06-01  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_project.c: Added init of some important variables which 
	  libgeda uses when promoting attributes.  The attribute promotion
	  code is almost completely disabled through these defaults

	* tests/*.verilog: Updated baseline verilog tests cases to include
          Mike's header addition

	* scheme/gnet-verilog.scm: Added a missing newline in netlist header

2000-04-26  Stefan Petersen  <spe@geda.seul.org>

	* Added gnet-protelII.scm (for Protel2) and gnet-bae.scm (for
	  Bartels Autoengineer) to the ever increasing list of contributed
	  backends for gnetlist. Contributed by Rolf Fiedler 
	  <Rolf.Fiedler@Ferrari.DE>
	
2000-04-21  Ales Hvezda  <ahvezda@geda.seul.org>

	* */*: Removed all traces of the physical attribute.  This attribute
	  is now called footprint

2000-04-20  Ales Hvezda  <ahvezda@geda.seul.org>

	* scheme/gnetlist.scm: Added useful scheme functions by Andrew 
          Bardsley

2000-04-15  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/g_netlist.c: Added g_get_pin_attribute which given a uref,
	  a pin number, and a wanted attribute returns the value.

	* src/create_proto: Updated prototype.h creation script to use gtk/glib
	  paths from my machine (installed in /usr/local ...)

	* src/g_register.c: Added entry for g_get_pin_attribute

2000-02-19  Ales Hvezda  <ahvezda@geda.seul.org>

	* README/INSTALL: Updated files to reflect next release
   
	* src/*.c: Fixed all warnings (using -Wall -Werror)

	* tests/*.verilog *.vhdl: Updated stored output to be current
	  (so that the tests pass)
