@@ -2,7 +2,8 @@
 scmdatadir = @gedadatadir@/scheme
 scmdata_DATA = gnet-PCB.scm gnet-allegro.scm gnet-bom.scm gnet-geda.scm \
 	       gnet-spice.scm gnet-tango.scm gnet-verilog.scm \
-	       gnet-vhdl.scm gnet-vipec.scm gnet-PCBboard.scm gnetlist.scm
+	       gnet-vhdl.scm gnet-vipec.scm gnet-PCBboard.scm \
+               gnet-pads.scm gnetlist.scm
 
 MOSTLYCLEANFILES = *.log *~
 CLEANFILES = *.log *~
